# rag-using-textbooks

./: .gitignore  README.md  app.py  pyproject.toml
notebooks/: rag.ipynb
src/: app.py  build_rag_system.py  get_chroma_collection.py  indexing.py  load_docs.py  prompts.py
